@@ -228,15 +228,15 @@ clean:
 	(cd lib;make clean)
 	(cd net;make clean)
 	(cd scripts; make clean)
-	@for i in `find -name Makefile`; do \
-	sed '/\#\#\# Dependencies/q' < $$i > tmp_make ; \
-	mv tmp_make $$i ; \
-	done
 	
 
 distclean:	clean
 	rm -f .config* .menuconfig*
 	rm -f scripts/lxdialog/*.o scripts/lxdialog/lxdialog
+	@for i in `find -name Makefile`; do \
+	sed '/\#\#\# Dependencies/q' < $$i > tmp_make ; \
+	mv tmp_make $$i ; \
+	done
 
 backup:	distclean
 	(cd .. ; tar cf - linuxmt | compress - > $(BACKUP_DIR)/linuxMT.tar.Z)
