@@ -3,6 +3,14 @@ the top of this file before committing any changes.
 
 Al
 ------------------------------------------------------------------------------
+Mon Oct 05 11:15 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
+
+	* Replaced functions cli() and sti() with single asm instruction
+	  macros icli() and isti(), which saves 96 bytes.
+
+	* Moved Makefile dependency cleaning to distclean as I was fed up
+	  of doing make dep so much.
+
 Sun Sep 25 12:37 BST 1998   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
 
 	* Removed redundant code from the dircon driver.
